--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <title>Didveli Gallery</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
 </body>
-<script>window.exports = module.exports</script>
-<script src="../node_modules/zone.js/dist/zone.js"></script>
-<script src="../node_modules/reflect-metadata/Reflect.js"></script>
+<!--<script>window.exports = module.exports</script>-->
+<!--<script src="../node_modules/zone.js/dist/zone.js"></script>-->
+<!--<script src="../node_modules/reflect-metadata/Reflect.js"></script>-->
 </html>
